[package]
name = "nekohouse_v3_visitor_registration"
version = "0.1.0"
edition = "2021"
authors = ["NekoHouse Team"]
description = "NekoHouse V3 访客登记系统 - Telegram Bot with SQLite database"

[[bin]]
name = "nekohouse_bot"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Telegram Bot API
teloxide = { version = "0.12", features = ["macros"], default-features = false }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling (already used in gen_password)
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.13"

# String validation
validator = { version = "0.16", features = ["derive"] }

# HTTP client for network testing
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
tempfile = "3.0"